objects/User.object
<CustomObject>
    <fields>
        <fullName>ADFunctionalDepartment__c</fullName>
        <description>This field will be populated with functional department in Active Directory by EPAT job.</description>
        <inlineHelpText>This field will be populated with functional department in Active Directory by EPAT job.</inlineHelpText>
        <label>AD Functional Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveDirectoryId__c</fullName>
        <label>Active Directory Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveUserProxy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just to avoid DML Mixed operation exception</description>
        <label>ActiveUserProxy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivityChannelId__c</fullName>
        <description>Used To Tag the Activities and Opportunities created by the user.</description>
        <externalId>true</externalId>
        <inlineHelpText>READ ONLY FIELD : This Will be populated by the UserTerritory__c assignment when the Territory Assignment is tagged as an Activity Territory. Please never update this field directly. Instead Delete/Insert the relevant UserTerritory__c record.</inlineHelpText>
        <label>Activity Channel Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityChannelName__c</fullName>
        <description>Used To Tag the Activities and Opportunities created by the user.</description>
        <inlineHelpText>READ ONLY FIELD : This Will be populated by the UserTerritory__c assignment when the Territory Assignment is tagged as an Activity Territory. Please never update this field directly. Instead Delete/Insert the relevant UserTerritory__c record.</inlineHelpText>
        <label>Activity Channel Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityRegionDept__c</fullName>
        <formula>CASE(ActivityTerritoryType__c
,'Territory', ActivityTerritoryParentName__c , ActivityTerritoryName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Region/Dept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityReporting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is meant to be used as a filter on Managerial Dashboard to display only Users that are actively managed around the Activities and Opportunities that they enter in the system</inlineHelpText>
        <label>Activity Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryId__c</fullName>
        <description>Used To Tag the Activities and Opportunities created by the user.</description>
        <externalId>true</externalId>
        <inlineHelpText>READ ONLY FIELD : This Will be populated by the UserTerritory__c assignment when the Territory Assignment is tagged as an Activity Territory. Please never update this field directly. Instead Delete/Insert the relevant UserTerritory__c record.</inlineHelpText>
        <label>Activity Territory Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryMARSName__c</fullName>
        <description>The MARS Name of the Activity Territory (Territory__c.TerritoryName__c)</description>
        <label>Activity Territory MARS Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryName__c</fullName>
        <description>Used To Tag the Activities and Opportunities created by the user.</description>
        <inlineHelpText>READ ONLY FIELD : This Will be populated by the UserTerritory__c assignment when the Territory Assignment is tagged as an Activity Territory. Please never update this field directly. Instead Delete/Insert the relevant UserTerritory__c record.</inlineHelpText>
        <label>Activity Territory Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryParentId__c</fullName>
        <description>The Activity Territory's parent Id</description>
        <label>Activity Territory Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryParentMARSName__c</fullName>
        <description>The activity territory's parent's MARS Name</description>
        <label>Activity Territory Parent MARS Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryParentName__c</fullName>
        <description>The Activity Territory's parent's Name</description>
        <label>Activity Territory Parent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryParentType__c</fullName>
        <description>Activity Territory's Parent Type</description>
        <label>Activity Territory Parent Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryRoleGroupId__c</fullName>
        <description>The RoleGroupId from the activity territory's territory</description>
        <label>Activity Territory RoleGroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryRoleId__c</fullName>
        <description>The role Id from the user's activity territory</description>
        <label>Activity Territory RoleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryType__c</fullName>
        <description>The type of territory for the Activity Territory</description>
        <label>Activity Territory Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTerritoryZoneName__c</fullName>
        <description>Activity Territory Zone Name is derived from the Activity Zone Id.</description>
        <formula>IF( ActivityZoneId__c = "a1bF0000003XUiWIAW", "All Zones", 
IF( ActivityZoneId__c = "a1bF0000003XRz5IAG", "MRD", 
IF( ActivityZoneId__c = "a1bF0000003XTBCIA4", "RD1", 
IF( ActivityZoneId__c = "a1bF0000003XTBRIA4", "RD2", 
IF( ActivityZoneId__c = "a1bF0000003XTBWIA4", "RD3", 
IF( ActivityZoneId__c = "a1bF0000003XTBgIAO", "IC", 
IF( ActivityZoneId__c = "a1b2A000005HHBpQAO", "IC1", 
IF( ActivityZoneId__c = "a1b2A000005HHBqQAO", "IC2", 
IF( ActivityZoneId__c = "a1b2A000005HHBrQAO", "IC3", 
IF( ActivityZoneId__c = "a1b2A000005HHBsQAO", "IC4", 
IF( ActivityZoneId__c = "a1b2A000005HHBtQAO", "RD1", 
IF( ActivityZoneId__c = "a1b2A000005HHBuQAO", "RD2", 
IF( ActivityZoneId__c = "a1b2A000005HHBvQAO", "DIR1", 
IF( ActivityZoneId__c = "a1b2A000005HHBwQAO", "DIR2", 
IF( ActivityZoneId__c = "a1b2A000005HHBxQAO", "DIR3", 
IF( ActivityZoneId__c = "a1b2A000005HHByQAO", "DIR4", 
IF( ActivityZoneId__c = "a1b2A000005HHBzQAO", "DIR5", 
IF( ActivityZoneId__c = "a1b2A000005HHC0QAO", "MRD1", 
IF( ActivityZoneId__c = "a1b2A000005HHC1QAO", "MRD2", 
IF( ActivityZoneId__c = "a1b2A000005HHC2QAO", "MRD3", 
IF( ActivityZoneId__c = "a1b2A000005HHC3QAO", "MRD4", 
IF( ActivityZoneId__c = "a1b2A000005HHC4QAO", "MRD5", 
IF( ActivityZoneId__c = "a1b2A000005HHC5QAO", "MRD6", 
IF( ActivityZoneId__c = "a1b2A0000070V1JQAU", "MRD7", 
IF( ActivityZoneId__c = "a1b2A0000070V1OQAU", "MRD8", 
IF( ActivityZoneId__c = "a1b2A0000070V1TQAU", "MRD9",
IF( ActivityZoneId__c = "a1b2A000005HHC6QAO", "MD", 
IF( ActivityZoneId__c = "a1bF00000053btoIAA", "Inbound", NULL ))))))))))))))))))))))))))))</formula>
        <label>Activity Territory Zone Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityZoneId__c</fullName>
        <description>Used To Tag the Activities and Opportunities created by the user.</description>
        <inlineHelpText>READ ONLY FIELD : This Will be populated by the UserTerritory__c assignment when the Territory Assignment is tagged as an Activity Territory. Please never update this field directly. Instead Delete/Insert the relevant UserTerritory__c record.</inlineHelpText>
        <label>Activity Zone Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtemusTerritory__c</fullName>
        <description>Used for Artemus integration</description>
        <formula>CASE(ActivityTerritoryType__c
,'Territory',ActivityTerritoryParentMARSName__c
,ActivityTerritoryMARSName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Artemus Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtemusUserType__c</fullName>
        <description>Used to determine sales users for artemus application.</description>
        <inlineHelpText>Used to determine sales users for artemus application.</inlineHelpText>
        <label>Artemus User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLIENT SERVICE</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>ITUser</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>MarketingUser</fullName>
                </value>
                <value>
                    <fullName>SalesUser</fullName>
                </value>
                <value>
                    <fullName>TestUser</fullName>
                </value>
                <value>
                    <fullName>THAWLEY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field will be populated by EPAT-SFDC job with ITSM# - Effective Date - EPAT Request Type. Every new request will append to the previous comments. If manually added, please add teh SR# or Incident task#.</description>
        <inlineHelpText>This field will be populated by EPAT-SFDC job with ITSM# - Effective Date - EPAT Request Type. Every new request will append to the previous comments. If manually added, please add teh SR# or Incident task#.</inlineHelpText>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommunityStatus__c</fullName>
        <description>For community users who have been inactivated, this field contains the reason for inactivation.  If the user is active, it contains "Active".</description>
        <inlineHelpText>For community users who have been inactivated, this field contains the reason for inactivation.  If the user is active, it contains "Active".</inlineHelpText>
        <label>Community Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentMonthActiveDays__c</fullName>
        <formula>Current_Month_WD__c  - CurrentMonthTOH__c /28800</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Days Working</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMonthTOH__c</fullName>
        <inlineHelpText>Time Off Seconds</inlineHelpText>
        <label>Current Month TOS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Month_WD__c</fullName>
        <formula>$Setup.OrgBusinessDays__c.MTDProductionDays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to calculate Average Activity Calls, Meetings and Dials</inlineHelpText>
        <label>Work Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultTerritoryMARSName__c</fullName>
        <description>The Default Territory's MARS Name (Territory__c.TerritoryName__c)</description>
        <label>Default Territory MARS Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultTerritory__c</fullName>
        <description>Used by Literature fulfillment application.</description>
        <inlineHelpText>Used by Literature fulfillment application.</inlineHelpText>
        <label>Default Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Effective date of the EPAT request of type Terminationand populated by EPAT-SFDC job.</description>
        <inlineHelpText>Effective date of the EPAT request of type Terminationand populated by EPAT-SFDC job.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdeaPoints__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IdeaPoints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IdsCovered__c</fullName>
        <label>Ids Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeInManagerReport__c</fullName>
        <formula>OR(if ( FIND( ActivityChannelName__c,  $User.ReportFilter__c )&gt;0,true,false ), ManagerId =  $User.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is for Report filtering purposes, allowing to filter users based on ActivityChannel__c to ReportFilter__c and ManagerId = User.Id. Used in combination with the "User With" CRTs</inlineHelpText>
        <label>Include In Manager Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstitutionalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by compliance to flag Institutional Users so they can report on their Government Entity activity.  The “Government Entity” flag is on the Firm associated top the activity.</description>
        <inlineHelpText>This field is used by compliance to flag Institutional Users so they can report on their Government Entity activity.  The “Government Entity” flag is on the Firm associated top the activity.</inlineHelpText>
        <label>Institutional User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <label>Legacy Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyRole__c</fullName>
        <label>Legacy Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>CiviComm</fullName>
                </value>
                <value>
                    <fullName>Client Service</fullName>
                </value>
                <value>
                    <fullName>Data Stewardship</fullName>
                </value>
                <value>
                    <fullName>Data Stewardship - READ-ONLY</fullName>
                </value>
                <value>
                    <fullName>Fiduciary Services Manager</fullName>
                </value>
                <value>
                    <fullName>Fiduciary Services Sales</fullName>
                </value>
                <value>
                    <fullName>Global Relationships Sales</fullName>
                </value>
                <value>
                    <fullName>IAG Manager</fullName>
                </value>
                <value>
                    <fullName>IAG Sales</fullName>
                </value>
                <value>
                    <fullName>IAG Sales MRD</fullName>
                </value>
                <value>
                    <fullName>Overlay Sales</fullName>
                </value>
                <value>
                    <fullName>PRC Sales</fullName>
                </value>
                <value>
                    <fullName>Retirement Sales</fullName>
                </value>
                <value>
                    <fullName>TEST Wirehouse IC for PRCG</fullName>
                </value>
                <value>
                    <fullName>Wirehouse IC</fullName>
                </value>
                <value>
                    <fullName>Wirehouse MRD</fullName>
                </value>
                <value>
                    <fullName>Wirehouse RD</fullName>
                </value>
                <value>
                    <fullName>Wirehouse Sales Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyUserId__c</fullName>
        <label>Legacy UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyUserSignInID__c</fullName>
        <label>Legacy User Sign In ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitedLicense__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>These are the users that do not need access to Cases and Leads for Licensing Purposes.</inlineHelpText>
        <label>Limited License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiteratureChannel__c</fullName>
        <description>Used for sending the user context to HarteHanks for Literature Order and Marketing Library. CTA level approval first needs to be approved by Jennifer McTernan or someone in Compliance.</description>
        <inlineHelpText>Used for sending the user context to HarteHanks for Literature Order and Marketing Library.</inlineHelpText>
        <label>Literature Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADU</fullName>
                </value>
                <value>
                    <fullName>ADU-CTA</fullName>
                </value>
                <value>
                    <fullName>FDU</fullName>
                </value>
                <value>
                    <fullName>FDU-CTA</fullName>
                </value>
                <value>
                    <fullName>Global Relationships</fullName>
                </value>
                <value>
                    <fullName>IDU</fullName>
                </value>
                <value>
                    <fullName>IDU-CTA</fullName>
                </value>
                <value>
                    <fullName>MPA</fullName>
                </value>
                <value>
                    <fullName>PRIVATE PLACEMENT</fullName>
                </value>
                <value>
                    <fullName>RADU</fullName>
                </value>
                <value>
                    <fullName>RADU-CTA</fullName>
                </value>
                <value>
                    <fullName>RCDU</fullName>
                </value>
                <value>
                    <fullName>RCDU-CTA</fullName>
                </value>
                <value>
                    <fullName>Natixis Advisors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiteratureGroup__c</fullName>
        <description>Used for sending the user context to HarteHanks for Literature Order and Marketing Library.</description>
        <inlineHelpText>Used for sending the user context to HarteHanks for Literature Order and Marketing Library.</inlineHelpText>
        <label>Literature Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MARSUserID__c</fullName>
        <externalId>true</externalId>
        <label>MARS User ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MyActivityTerritory__c</fullName>
        <description>Used to Filter the Activity Team report so users can see activities for their entire team.</description>
        <formula>if ( IF(ISNUMBER(TRIM(RIGHT(ActivityTerritoryMARSName__c,2))),MID(ActivityTerritoryMARSName__c,1,LEN(ActivityTerritoryMARSName__c)-2),ActivityTerritoryMARSName__c)  =  IF(ISNUMBER(TRIM(RIGHT($User.ActivityTerritoryMARSName__c,2))),MID($User.ActivityTerritoryMARSName__c,1,LEN($User.ActivityTerritoryMARSName__c)-2),$User.ActivityTerritoryMARSName__c) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MyActivityTerritory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NamesCovered__c</fullName>
        <label>Names Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberCovered__c</fullName>
        <label>Number Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfComments__c</fullName>
        <label>Number of Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <description>Picture file in base64 form used for transferring user pic from AD to SFDC.  Do NOT put this on the User Layout ... the page will break.</description>
        <label>Picture</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryChannelId__c</fullName>
        <label>Primary Channel Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryChannelURL__c</fullName>
        <formula>HYPERLINK( '/'&amp; PrimaryChannelId__c ,  PrimaryChannel__c, '_new')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryChannel__c</fullName>
        <label>Primary Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryTerritoryId__c</fullName>
        <externalId>true</externalId>
        <label>PrimaryTerritoryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryTerritoryURL__c</fullName>
        <formula>HYPERLINK( '/'&amp;  PrimaryTerritoryId__c  , PrimaryTerritory__c, '_new')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryTerritory__c</fullName>
        <label>Primary Territory</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Used in the Affiliate Request Flow to filter 'Requested on Behalf' of.  Can not use Out of Box field for end users.</description>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProxyProfileId__c</fullName>
        <externalId>true</externalId>
        <label>ProxyProfileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReactivatedDatetime__c</fullName>
        <description>Set by trigger when existing user goes from Inactive to Active</description>
        <label>Reactivated Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReportFilter__c</fullName>
        <description>Comma Delimited String of Channels the user should be able to view for Opportunity and Activity Managerial reports</description>
        <inlineHelpText>Include All the Channels that this user would need to see when looking at consolidate Opportunity and Activity Reports/Dashboards using the "User With" CRTs.</inlineHelpText>
        <label>Report Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportRole__c</fullName>
        <description>Hard code the user role so if they toggle it is not updated. Used in reports</description>
        <label>Report Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleProxy__c</fullName>
        <label>RoleProxy</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleURL__c</fullName>
        <formula>HYPERLINK( '/'&amp;  RoleProxy__c  , 'SFDC ROLE', '_new')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SameChannel__c</fullName>
        <formula>if( ActivityChannelName__c =  $User.ActivityChannelName__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Effective date of the EPAT request of type Onboard and populated by EPAT-SFDC job.</description>
        <inlineHelpText>Effective date of the EPAT request of type Onboard and populated by EPAT-SFDC job.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used in the Affiliate Request Flow to filter 'Requested on Behalf' of. Can not use Out of Box field for end users.</description>
        <formula>IF( IsActive = True, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TermsConditionFileVersionID__c</fullName>
        <description>Field to store latest  ContentVersion Id for Terms and Conditions File that is accepted by community user</description>
        <inlineHelpText>Field to store latest  ContentVersion Id for Terms and Conditions File that is accepted by community user</inlineHelpText>
        <label>Terms and Conditions File Version ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermsConditionsAcceptAfterDecline__c</fullName>
        <formula>IF( TermsConditionsLastAccepted__c &gt;  TermsandConditionsLastDeclined__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms Conditions Accept After Decline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TermsConditionsLastAccepted__c</fullName>
        <description>Last time the user has accepted the Terms and Conditions of the community site.  This is set by Community User T&amp;C Log-in Flow</description>
        <inlineHelpText>Last time the user has accepted the Terms and Conditions of the community site.</inlineHelpText>
        <label>Terms Conditions Last Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TermsandConditionsLastDeclined__c</fullName>
        <description>Datetime stamp set each time a community user declines the Terms and Conditions.</description>
        <inlineHelpText>Datetime stamp set each time a community user declines the Terms and Conditions.</inlineHelpText>
        <label>Terms and Conditions Last Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_Reactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Need Licenses Freed UP - Unactivated Manually</description>
        <inlineHelpText>Need Licenses Freed UP - Unactivated Manually</inlineHelpText>
        <label>To Reactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <description>This field does not carry any real data.  It is used so that it will kick off workflow, process builder, triggers, etc. when changed.</description>
        <inlineHelpText>This field does not carry any real data.  It is used so that it will kick off workflow, process builder, triggers, etc. when changed.</inlineHelpText>
        <label>Touch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainedDate__c</fullName>
        <inlineHelpText>Populate with the date that the user is to be trained. Please populate the 'Training Attended' flag once they actually attended.</inlineHelpText>
        <label>Training Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TrainingAttended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Populate once the user actually attended the training session, not just registered.</inlineHelpText>
        <label>Training Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <defaultValue>"Populate This Field"</defaultValue>
        <externalId>true</externalId>
        <label>UserID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <formula>UPPER(LEFT(Username, find('@',Username)-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Field is the unique ID based on the Salesforce Username</inlineHelpText>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRoleText__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to easily find the main Sales Managers</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZoneCoverage__c</fullName>
        <label>Zone Coverage</label>
        <relationshipName>ZoneCoverage</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>ZoneFullName__c</fullName>
        <formula>LastName &amp; ", " &amp;FirstName &amp; " - (" &amp; ZoneLabel__c &amp;")"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoneID__c</fullName>
        <externalId>true</externalId>
        <label>Zone ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoneLabel__c</fullName>
        <label>Zone Label</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoneNumber__c</fullName>
        <label>Zone Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZoneURL__c</fullName>
        <formula>HYPERLINK( '/'&amp;  ZoneID__c  ,  ZoneLabel__c &amp; ' - ' &amp; text(ZoneNumber__c), '_new')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone Assignement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZonesCovered__c</fullName>
        <label>Zones Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyInsightListViewId__c</fullName>
        <description>Id of this user's private key insight list view.</description>
        <inlineHelpText>Id of this user's private key insight list view.</inlineHelpText>
        <label>Key Insight List View Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>ActiveCommunityUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>ZoneLabel__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>RoleURL__c</columns>
        <columns>ActivityReporting__c</columns>
        <columns>DefaultTerritory__c</columns>
        <columns>PrimaryChannelURL__c</columns>
        <columns>PrimaryTerritory__c</columns>
        <columns>ActivityTerritoryName__c</columns>
        <columns>ActivityChannelName__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>NGAM Community Plus User</value>
        </filters>
        <label>Active Community Users</label>
    </listViews>
</CustomObject>